tests/ui/attr_expected_ident.stderr
error: fixcol-derive error: Expected identifier.
 --> tests/ui/attr_expected_ident.rs:5:25
  |
5 |     #[fixcol(width = 5, "right")]
  |                         ^^^^^^^
